<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/amount_section"
        >
     <TextView
            android:id="@+id/amount"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
            android:text="@string/amount_label" 
            android:textSize="16sp"/>
    <EditText
        android:id="@+id/transaction_amount"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:inputType="numberDecimal"
		/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/amount_section"
        android:id="@+id/category_section"
        >
	    <TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
	            android:text="@string/category_label" 
	            android:textSize="16sp"/>
        <AutoCompleteTextView 
        android:id="@+id/categories_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/category_prompt" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/category_section"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_type_label"
            android:textSize="16sp"
            />
        <Spinner
    		android:id="@+id/transaction_type"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content" />
    </LinearLayout>
    
    <Button
        android:id="@+id/add_transaction"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_transaction_btn"
        android:layout_alignParentBottom="true"
        android:onClick="onClick"
        />

</RelativeLayout>
